components/creekbluemanage/sbc/lib/sbc_bindings_generated.dart


  /// Returns the output block size in bytes
  int sbc_get_frame_length(
    ffi.Pointer<sbc_t> sbc,
  ) {
    return _sbc_get_frame_length(
      sbc,
    );
  }

  late final _sbc_get_frame_lengthPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function(ffi.Pointer<sbc_t>)>>(
          'sbc_get_frame_length');
  late final _sbc_get_frame_length =
      _sbc_get_frame_lengthPtr.asFunction<int Function(ffi.Pointer<sbc_t>)>();

  /// Returns the time one input/output block takes to play in msec
  int sbc_get_frame_duration(
    ffi.Pointer<sbc_t> sbc,
  ) {
    return _sbc_get_frame_duration(
      sbc,
    );
  }

  late final _sbc_get_frame_durationPtr =
      _lookup<ffi.NativeFunction<ffi.UnsignedInt Function(ffi.Pointer<sbc_t>)>>(
          'sbc_get_frame_duration');
  late final _sbc_get_frame_duration =
      _sbc_get_frame_durationPtr.asFunction<int Function(ffi.Pointer<sbc_t>)>();

  /// Returns the input block size in bytes
  int sbc_get_codesize(
    ffi.Pointer<sbc_t> sbc,
  ) {
    return _sbc_get_codesize(
      sbc,
    );
  }

  late final _sbc_get_codesizePtr =
      _lookup<ffi.NativeFunction<ffi.Size Function(ffi.Pointer<sbc_t>)>>(
          'sbc_get_codesize');
  late final _sbc_get_codesize =
      _sbc_get_codesizePtr.asFunction<int Function(ffi.Pointer<sbc_t>)>();

  ffi.Pointer<ffi.Char> sbc_get_implementation_info(
    ffi.Pointer<sbc_t> sbc,
  ) {
    return _sbc_get_implementation_info(
      sbc,
    );
  }

  late final _sbc_get_implementation_infoPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<sbc_t>)>>(
      'sbc_get_implementation_info');
  late final _sbc_get_implementation_info = _sbc_get_implementation_infoPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<sbc_t>)>();

  void sbc_finish(
    ffi.Pointer<sbc_t> sbc,
  ) {
    return _sbc_finish(
      sbc,
    );
  }

  late final _sbc_finishPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<sbc_t>)>>(
          'sbc_finish');
  late final _sbc_finish =
      _sbc_finishPtr.asFunction<void Function(ffi.Pointer<sbc_t>)>();

  void pcm_to_sbc(
    ffi.Pointer<ffi.Char> filename,
    ffi.Pointer<ffi.Char> output,
    int msbc,
  ) {
    return _pcm_to_sbc(
      filename,
      output,
      msbc,
    );
  }

  late final _pcm_to_sbcPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Int)>>('pcm_to_sbc');
  late final _pcm_to_sbc = _pcm_to_sbcPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)>();

  void sbc_to_pcm(
    ffi.Pointer<ffi.Char> filename,
    ffi.Pointer<ffi.Char> output,
    int msbc,
  ) {
    return _sbc_to_pcm(
      filename,
      output,
      msbc,
    );
  }

  late final _sbc_to_pcmPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Int)>>('sbc_to_pcm');
  late final _sbc_to_pcm = _sbc_to_pcmPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)>();

  void sbc_init_primitives(
    ffi.Pointer<sbc_encoder_state> state,
  ) {
    return _sbc_init_primitives(
      state,
    );
  }

  late final _sbc_init_primitivesPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<sbc_encoder_state>)>>(
      'sbc_init_primitives');
  late final _sbc_init_primitives = _sbc_init_primitivesPtr
      .asFunction<void Function(ffi.Pointer<sbc_encoder_state>)>();

  void sbc_decode_init(
    ffi.Pointer<sbc_t> sbc,
    int msbc,
  ) {
    return _sbc_decode_init(
      sbc,
      msbc,
    );
  }

  late final _sbc_decode_initPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<sbc_t>, ffi.Int)>>(
      'sbc_decode_init');
  late final _sbc_decode_init =
      _sbc_decode_initPtr.asFunction<void Function(ffi.Pointer<sbc_t>, int)>();

  void my_sbc_init() {
    return _my_sbc_init();
  }

  late final _my_sbc_initPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('my_sbc_init');
  late final _my_sbc_init = _my_sbc_initPtr.asFunction<void Function()>();

  int sbc_decoder_decode(
    ffi.Pointer<sbc_t> sbc,
    ffi.Pointer<ffi.Char> input,
    int input_len,
    ffi.Pointer<ffi.Char> output,
    int output_len,
    ffi.Pointer<ffi.Size> written,
  ) {
    return _sbc_decoder_decode(
      sbc,
      input,
      input_len,
      output,
      output_len,
      written,
    );
  }

  late final _sbc_decoder_decodePtr = _lookup<
      ffi.NativeFunction<
          ssize_t Function(
              ffi.Pointer<sbc_t>,
              ffi.Pointer<ffi.Char>,
              ffi.Size,
              ffi.Pointer<ffi.Char>,
              ffi.Size,
              ffi.Pointer<ffi.Size>)>>('sbc_decoder_decode');
  late final _sbc_decoder_decode = _sbc_decoder_decodePtr.asFunction<
      int Function(ffi.Pointer<sbc_t>, ffi.Pointer<ffi.Char>, int,
          ffi.Pointer<ffi.Char>, int, ffi.Pointer<ffi.Size>)>();

  int my_decoder_decode(
    ffi.Pointer<ffi.Char> input,
    int input_len,
    ffi.Pointer<ffi.Char> output,
    int output_len,
    ffi.Pointer<ffi.Size> written,
  ) {
    return _my_decoder_decode(
      input,
      input_len,
      output,
      output_len,
      written,
    );
  }

  late final _my_decoder_decodePtr = _lookup<
      ffi.NativeFunction<
          ssize_t Function(
              ffi.Pointer<ffi.Char>,
              ffi.Size,
              ffi.Pointer<ffi.Char>,
              ffi.Size,
              ffi.Pointer<ffi.Size>)>>('my_decoder_decode');
  late final _my_decoder_decode = _my_decoder_decodePtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, int, ffi.Pointer<ffi.Char>, int,
          ffi.Pointer<ffi.Size>)>();

  void sbc_decoder_uninit(
    ffi.Pointer<sbc_t> sbc,
  ) {
    return _sbc_decoder_uninit(
      sbc,
    );
  }

  late final _sbc_decoder_uninitPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<sbc_t>)>>(
          'sbc_decoder_uninit');
  late final _sbc_decoder_uninit =
      _sbc_decoder_uninitPtr.asFunction<void Function(ffi.Pointer<sbc_t>)>();

  void sbc_encode_init(
    ffi.Pointer<sbc_t> sbc,
    int msbc,
  ) {
    return _sbc_encode_init(
      sbc,
      msbc,
    );
  }

  late final _sbc_encode_initPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<sbc_t>, ffi.Int)>>(
      'sbc_encode_init');
  late final _sbc_encode_init =
      _sbc_encode_initPtr.asFunction<void Function(ffi.Pointer<sbc_t>, int)>();

  int sbc_encoder_encode(
    ffi.Pointer<sbc_t> sbc,
    ffi.Pointer<ffi.Void> input,
    int input_len,
    ffi.Pointer<ffi.Void> output,
    int output_len,
    ffi.Pointer<ssize_t> written,
  ) {
    return _sbc_encoder_encode(
      sbc,
      input,
      input_len,
      output,
      output_len,
      written,
    );
  }

  late final _sbc_encoder_encodePtr = _lookup<
      ffi.NativeFunction<
          ssize_t Function(
              ffi.Pointer<sbc_t>,
              ffi.Pointer<ffi.Void>,
              ffi.Size,
              ffi.Pointer<ffi.Void>,
              ffi.Size,
              ffi.Pointer<ssize_t>)>>('sbc_encoder_encode');
  late final _sbc_encoder_encode = _sbc_encoder_encodePtr.asFunction<
      int Function(ffi.Pointer<sbc_t>, ffi.Pointer<ffi.Void>, int,
          ffi.Pointer<ffi.Void>, int, ffi.Pointer<ssize_t>)>();

  int my_encoder_encode(
    ffi.Pointer<ffi.Char> input,
    int input_len,
    ffi.Pointer<ffi.Char> output,
    int output_len,
    ffi.Pointer<ssize_t> written,
  ) {
    return _my_encoder_encode(
      input,
      input_len,
      output,
      output_len,
      written,
    );
  }

  late final _my_encoder_encodePtr = _lookup<
      ffi.NativeFunction<
          ssize_t Function(
              ffi.Pointer<ffi.Char>,
              ffi.Size,
              ffi.Pointer<ffi.Char>,
              ffi.Size,
              ffi.Pointer<ssize_t>)>>('my_encoder_encode');
  late final _my_encoder_encode = _my_encoder_encodePtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, int, ffi.Pointer<ffi.Char>, int,
          ffi.Pointer<ssize_t>)>();

  void sbc_encoder_uninit(
    ffi.Pointer<sbc_t> sbc,
  ) {
    return _sbc_encoder_uninit(
      sbc,
    );
  }

  late final _sbc_encoder_uninitPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<sbc_t>)>>(
          'sbc_encoder_uninit');
  late final _sbc_encoder_uninit =
      _sbc_encoder_uninitPtr.asFunction<void Function(ffi.Pointer<sbc_t>)>();

  int sbc_malloc() {
    return _sbc_malloc();
  }

  late final _sbc_mallocPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('sbc_malloc');
  late final _sbc_malloc = _sbc_mallocPtr.asFunction<int Function()>();

  int sbc_free() {
    return _sbc_free();
  }

  late final _sbc_freePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('sbc_free');
  late final _sbc_free = _sbc_freePtr.asFunction<int Function()>();
}

class sbc_encoder_state extends ffi.Struct {
  @ffi.Int()
  external int position;

  /// Number of consecutive blocks handled by the encoder
  @ffi.Uint8()
  external int increment;

  @ffi.Array.multi([2, 328])
  external ffi.Array<ffi.Array<ffi.Int16>> X;

  /// Polyphase analysis filter for 4 subbands configuration,
  /// it handles "increment" blocks at once
  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<sbc_encoder_state> state,
              ffi.Pointer<ffi.Int16> x,
              ffi.Pointer<ffi.Int32> out,
              ffi.Int out_stride)>> sbc_analyze_4s;

  /// Polyphase analysis filter for 8 subbands configuration,
  /// it handles "increment" blocks at once
  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<sbc_encoder_state> state,
              ffi.Pointer<ffi.Int16> x,
              ffi.Pointer<ffi.Int32> out,
              ffi.Int out_stride)>> sbc_analyze_8s;

  /// Process input data (deinterleave, endian conversion, reordering),
  /// depending on the number of subbands and input data byte order
  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Int position,
              ffi.Pointer<ffi.Uint8> pcm,
              ffi.Pointer<ffi.Pointer<ffi.Int16>> X,
              ffi.Int nsamples,
              ffi.Int nchannels)>> sbc_enc_process_input_4s_le;

  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Int position,
              ffi.Pointer<ffi.Uint8> pcm,
              ffi.Pointer<ffi.Pointer<ffi.Int16>> X,
              ffi.Int nsamples,
              ffi.Int nchannels)>> sbc_enc_process_input_4s_be;

  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Int position,
              ffi.Pointer<ffi.Uint8> pcm,
              ffi.Pointer<ffi.Pointer<ffi.Int16>> X,
              ffi.Int nsamples,
              ffi.Int nchannels)>> sbc_enc_process_input_8s_le;

  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Int position,
              ffi.Pointer<ffi.Uint8> pcm,
              ffi.Pointer<ffi.Pointer<ffi.Int16>> X,
              ffi.Int nsamples,
              ffi.Int nchannels)>> sbc_enc_process_input_8s_be;

  /// Scale factors calculation
  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Pointer<ffi.Pointer<ffi.Int32>>> sb_sample_f,
              ffi.Pointer<ffi.Pointer<ffi.Uint32>> scale_factor,
              ffi.Int blocks,
              ffi.Int channels,
              ffi.Int subbands)>> sbc_calc_scalefactors;
